Endpoint to handle departments
