# src/sequelize/models/department.js
@@ -3,10 +3,19 @@ module.exports = (sequelize, DataTypes) => {
   const Department = sequelize.define (
     'Department',
     {
-      name: DataTypes.STRING,
+      department_id: {
+        type: DataTypes.INTEGER,
+        primaryKey: true,
+      },
+      name: {
+        type: DataTypes.STRING,
+        unique: true,
+      },
+      description: DataTypes.STRING,
     },
     {
       tableName: 'department',
+      timestamps: false,
     }
   );
   Department.associate = function (models) {
